--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/**
 !**/src/main/**/target/
 !**/src/test/**/target/
+mvnw*
 
 ### STS ###
 .apt_generated
